# ChineseChess_Muzero_App

./: .gitignore  README.md  justfile  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.freezed.dart  extend_log_api.dart  extend_util_api.dart  ffi.dart  gened_log_api.dart  gened_rule_api.dart  gened_rule_api.io.dart  gened_rule_api.web.dart  gened_ucci_api.dart  gened_ucci_api.io.dart  gened_ucci_api.web.dart  gened_util_api.dart  gened_util_api.io.dart  gened_util_api.web.dart  main.dart  shared.dart
lib/common/: global.dart
lib/common/route/: route.dart
lib/common/widgets/: engine_load_button.dart  float_tool.dart  floatingPanel.dart  ios_dialog_widget.dart  ios_menu_widget.dart  toast_message.dart
lib/common/widgets/toast/: toast_message.dart  toast_style.dart
lib/pages/home/: ctrl.dart  lib.dart  view.dart
lib/pages/home/widgets/: board_arrow.dart  command_bar.1.dart  command_bar.2.dart  command_bar.dart  engine_pull_down_button.dart  floatingPanel.dart  log_table.dart  mark_point.dart  player_panel.dart  (+2 more)
lib/pages/train/: ctrl.dart  lib.dart  view.dart
linux/: CMakeLists.txt
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: bridge_generated.h
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  bridge_generated.rs  gened_log_api.rs  gened_rule_api.io.rs  gened_rule_api.rs  gened_rule_api.web.rs  gened_ucci_api.io.rs  gened_ucci_api.rs  gened_ucci_api.web.rs  gened_util_api.io.rs  gened_util_api.rs  gened_util_api.web.rs  lib.rs  log_api.rs  rule_api.rs  ucci_api.rs  util_api.rs
native/src/chess/: mod.rs
native/src/ucci/: mod.rs
web/: index.html
windows/: rust.cmake
windows/runner/: main.cpp
(+6 files in other folders)
