[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1.34.2"
once_cell = "*"
phf = { version = "*", features = ["macros"] }
num-traits = "*"
num-derive = "*"
# tokio = { version = "1", features = ["rt", "macros"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
process-stream = "0.4.1"
